[package]
name = "synched-memory"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
rand = "0.8.5"
rayon = "1.10.0"

[[example]]
# example of how to call this library with rayon
name = "rayon"
path = "examples/rayon.rs"

[[bench]]
name = "fibonacci"
path = "benches/bench.rs"
harness = false

[features]
default = []
# default = [ "profiler" ]
profiler = []